[Fix Bug 904758] Fixes search box placeholder text cut off and search on logged in homepage.

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -118,9 +118,11 @@
 body {
     &.loggedin {
         #masthead {
-            @media (min-width: @breakMobileLandscape) and
-            (max-width: @breakTablet) {
+            @media (max-width: @breakTablet) {
                 padding-bottom: 0;
+            }
+            @media (max-width: @breakMobile) {
+                padding-bottom: 20px;
             }
         }
         #content-wrapper {
@@ -135,7 +137,7 @@ body {
         }
         #nav-main {
             @media (max-width: @breakTablet) {
-                float: none;
+                position: absolute;
                 i { font-size: 30px; }
                 span {
                     &.username { display: none; }
@@ -143,6 +145,18 @@ body {
                 }
             }
 
+        }
+        .brand {
+            @media (max-width: @breakTablet) {
+                margin-left: 40px;
+            }
+            @media (max-width: @breakMobileLandscape) {
+                margin-left: 35px;
+                img {
+                    padding: 5px 0 0 0;
+                    width: 100px;
+                }
+            }
         }
         &.old {
             #main {
@@ -458,9 +472,6 @@ nav {
                 right: 11px;
                 z-index: -100;
                 @media (max-width: @breakTablet) {
-                    right: 6px;
-                }
-                @media (max-width: @breakMobileLandscape) {
                     right: 100%;
                     left: 4px;
                 }
@@ -831,6 +842,12 @@ body#home {
         }
     }
     &.loggedin {
+        nav form.navbar-search {
+            display: none;
+            @media (max-width: @breakDesktop) {
+                display: inline;
+            }
+        }
         #main {
             #profile-info {
                 .span(3);
@@ -904,7 +921,7 @@ body#home {
                         color: lighten(@black,70%);
                     }
                     @media (max-width: @breakDesktop) {
-                            margin: 25px 0 0 0;
+                        display: none;
                     }
                 }
                 .announcements-mozfacts {
@@ -1597,12 +1614,15 @@ body#about {
 /* Invite/Invited
 ================== */
 body#invite {
-    .bump-button {
-        margin-bottom: 9px;
+    min-height: 500px;
+    button[type=submit] {
+        margin: 20px 0;
+        .button;
     }
-}
-body#invited, body#invite {
-    .old {
-        min-height: 500px;
+    textarea {
+        @media (max-width: @breakMobileLandscape) {
+            width: 80%;
+        }
     }
+    input { margin-bottom: 25px; }
 }
